# bump-rocket

./: Cargo.toml  README.md  Rocket.toml
public/: 404.html  callback.html  index.html
src/: db.rs  lib.rs  main.rs  model.rs  mongo_connection.rs  r2d2_mongodb.rs  routes.rs  scheme.rs  static_files.rs
src/cats/: handler.rs  mod.rs  repository.rs
src/spotify/: structs.rs
