[package]
name = "bump"
version = "0.1.0"
authors = ["Bhavik Makwana <bhavmak09@gmail.com>"]
readme = "README.md"


[dependencies]
diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.13.0"
r2d2 = "0.8.3"
r2d2-diesel = "1.0.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"

rocket = "0.4"
rocket_codegen = "0.4"

rand = "0.7.0" 
hyper = "0.13.6"
base64 = "0.12.1"
reqwest = { version = "0.10.6", features = ["json"] }
http = "0.2.1"
tokio = { version = "0.2.4", features = ["full"] }
async-std = { version = "1.2.0", features = ["attributes"] }
base64-url = "1.2.0"
futures = "0.3.5"

# Benches
criterion = "0.3"

[dependencies.rocket_contrib]
default-features = false
features = ["json", "serve"]
version = "0.4"

[[bench]]
name = "my_benchmark"
harness = false