[package]
name = "rustlang-rocket-mongodb"
version = "0.1.0"
authors = ["Louis Beaumont <louis.beaumont@gmail.com>"]
readme = "README.md"
edition = "2018"


[dependencies]
dotenv = "0.13.0"
r2d2 = "0.8.3"
r2d2-mongodb = "*"
rocket = "0.4"
rocket_codegen = "0.4"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
rand = "0.7.0" 
hyper = "0.13.6"
base64 = "0.12.1"
reqwest = { version = "0.10.6", features = ["json"] }
http = "0.2.1"
tokio = { version = "0.2.4", features = ["full"] }
async-std = { version = "1.2.0", features = ["attributes"] }
base64-url = "1.2.0"
rocket_cors = "0.5.0"

# Benches
criterion = "0.3"

[dependencies.mongodb]
version = "0.3.12"
default-features = false
# features = ["async-std-runtime"]

[dependencies.rocket_contrib]
default-features = false
features = ["mongodb_pool", "json"]
version = "0.4.5"



[[bench]]
name = "my_benchmark"
harness = false